--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Code Coverage
 on:
   push:
     branches:
-      - main # Modify this to your main branch name
+      - main
 
 jobs:
   build:
@@ -16,10 +16,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14' # Adjust to your Node.js version
+          node-version: '16.14.0'
 
-      - name: Install dependencies
+      - name: Install Node.js dependencies
         run: npm install
+
+      - name: Install global dependencies (if needed)
+        run: npm install -g react-test-renderer
 
       - name: Run tests and generate code coverage
         run: npm test -- --coverage
